# django_rest_auth_email_confirm_reset/serializers/__init__.py
@@ -1,2 +1,4 @@
 from .registration import RegistrationSerializer
 from .login import LoginSerializer
+from .password_reset import PasswordResetSerializer
+from .password_reset_confirmation import PasswordResetConfirmationSerializer
