# django_rest_auth_email_confirm_reset/views/__init__.py
@@ -3,5 +3,7 @@ from .login import LoginView
 from .logout import LogoutView
 from .auth_info import AuthInfoView
 from .confirmation import ConfirmationView
+from .password_reset import PasswordResetView
+from .password_reset_confirmation import PasswordResetConfirmationView
 
 from .swagger_expected import SwaggerExpectedView
